<resources>
    <string name="pref_I_understand_title"> I UNDERSTAND AND AGREE</string>
    <string name="pref_I_understand_summery">xDrip MUST NOT BE USED TO MAKE MEDICAL DECISIONS. THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION. </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth_scan">BluetoothScan</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_export_database">Export database</string>
    <string name="menu_export_csv_sidiary">Export CSV (SiDiary format)</string>
    <string name="menu_toggle_speakreadings">Speak-Readings</string>
    <string name="menu_import_db">Import database</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_calibration_graph">Calibration Graph</string>
    <string name="scan_share2_barcode">Scan Share Barcode</string>
    <string name="pref_share2_scan_barcode_summary">Or scan the barcode on the share receiver</string>
    <string name="wifi_recievers_dialog_message">Comma separated list of ip:port (for example 37.142.132.220:50005,37.142.132.220:50010,mongodb://user:pass@ds053958.mongolab.com:53958/db/collection)</string>
    <string name="wifi_recievers_dialog_title">Enter ip addresses and ports of receivers (including mongodb addresses if needed)</string>
    <string name="xdrip_viewer_ns_message_message">Enter nighscout site name and key. For example https://{YOUR-SITE}.azurewebsites.net</string>
    <string name="xdrip_viewer_ns_dialog_title">Nightscout rest api parameters, and secret key.</string>
    <string name="pref_title_broadcast_enabled">Broadcast locally</string>
    <string name="pref_summary_broadcast_enabled">Enable local broadcast of data so other apps (eg. NightWatch) can listen on new values</string>
    <string name="pref_pebble_display_trend">Display Trend</string>
    <string name="pref_summary_display_trend">Show the BG trend on the xDrip Pebble watch face.</string>
    <string name="pref_pebble_display_high_line">Display High Line</string>
    <string name="pref_pebble_display_low_line">Display Low Line</string>
    <string name="pref_title_send_to_pebble">Send to Pebble</string>
    <string name="pref_summary_send_to_pebble">If you have a pebble watch you can send bg data straight to it</string>
    <string name="pref_header_pebble_configuration">Pebble Configuration</string>
    <string name="pref_header_summary_pebble_configuration">Configure the appearance and behaviour of the pebble watchface.</string>
    <string name="pref_summary_pebble_display_high_line">Displays the High Line</string>
    <string name="pref_summary_pebble_display_low_line">Displays the Low line</string>
    <string name="pref_title_trend_time_period">Trend Time Period</string>
    <string name="pref_summary_trend_time_period">Set the trend period to display</string>
    <string name="pref_title_display_delta">Display Delta</string>
    <string name="pref_summary_display_delta">Displays the Delta value</string>
    <string name="pref_title_display_delta_units">Display Delta Units</string>
    <string name="pref_summary_display_delta_units">Displays the Delta units</string>
    <string name="pref_title_display_slow_arrows">Display Slope Arrows</string>
    <string name="pref_summary_display_slow_arrows">Displays the Slope Arrows</string>
    <string name="pref_title_special_value">Special Value</string>
    <string name="pref_summary_special_value">Special BGL value to display the message below</string>
    <string name="pref_title_text_to_display">Text to display</string>
    <string name="pref_summary_text_to_display">Message to display when BGL hits the special value above</string>
    <string name="pref_default_bazinga">BAZINGA!</string>
    <string name="pref_title_nosignal_vibrate">Vibrate on No-Signal</string>
    <string name="pref_summary_nosignal_vibrate">Vibrate when xDrip loses the signal.</string>
    <string name="pref_title_alert_vibration">Vibrate on Alerts</string>
    <string name="pref_summary_alert_vibration">Tell the watchface to vibrate on unsnoozed alerts.</string>
    <string name="action_resend_to_watch">Resend glucose to watch</string>
    <string name="action_open_watch_setting">Open Settings on Wear</string>
    <string name="export_submenu">Im-/Export...</string>
    <string name="pref_header_watch_integration">Watch Integration</string>
    <string name="pref_title_android_wear_integration">Android Wear Integration</string>
    <string name="pref_summary_android_wear_integration">Send data to Android Wear Watchface.</string>
    <string name="pref_title_predictive_values">Display Predictive Values</string>
    <string name="pref_summary_predictive_values">Not Recommended. xDrip will attempt to predict readings each minute based on the past few values.</string>
    <string name="pref_title_interpret_raw">Interpret Raw Values</string>
    <string name="pref_summary_interpret_raw">If using Share, DexDrip will show values when they are normally hidden on the receiver.</string>
    <string name="pref_title_filtered_plot">Display filtered plot</string>
    <string name="pref_summary_filtered_plot">Useful for noise and missed readings</string>
    <string name="pref_title_speak_readings">Speak Readings</string>
    <string name="pref_summary_speak_readings">If the phone has text-to-speech capabilities it will read new readings out loud.</string>
    <string name="pref_title_speak_readings_shortcut">Speak Readings Shortcut</string>
    <string name="pref_summary_speak_readings_shortcut">Show a shortcut in the ☰ menu to toggle Speak Readings</string>
    <string name="pref_title_store_logs">Store logs for troubleshooting</string>
    <string name="pref_summary_store_logs">Only enable if you are having trouble with the app.</string>
    <string name="pref_title_show_datatables">Show Datatables</string>
    <string name="pref_summary_show_datatables">Show Calibration and BG datatables in the app drawer.</string>
    <string name="pref_title_disable_battery_warning">Disable Battery Warning</string>
    <string name="pref_summary_disable_battery_warning">Disable the warning for low transmitter battery state on the home screen. (Only relevant for DIY receivers.)</string>
    <string name="pref_title_extra_status_line">Extra Status Line</string>
    <string name="pref_summary_extra_status_line">Advanced Calibration Data and/or Statistics</string>
    <string name="pref_show_extra_line">Show Extra Line</string>
    <string name="pref_title_show_on_wdiget">Show on widget</string>
    <string name="pref_summary_show_on_widget">Also show the extra status line on the widget</string>
    <string name="pref_title_calibration_data_long">Calibration Data (long)</string>
    <string name="pref_summary_calibration_data_long">Show slope and intercept in long form.</string>
    <string name="pref_title_calibration_data_short">Calibration Data (short)</string>
    <string name="pref_summary_calibration_data_short">Show slope and intercept in short form.</string>
    <string name="pref_title_average">Average</string>
    <string name="pref_summary_average">Today\'s average value.</string>
    <string name="pref_title_a1c_dcct">A1c DCCT</string>
    <string name="pref_summary_a1c_dcct">A1c estimation in DCCT format (%%)</string>
    <string name="pref_title_a1c_ifcc">A1c IFCC</string>
    <string name="pref_summary_a1c_ifcc">A1c estimation in IFCC format (mmol/mol)</string>
    <string name="pref_title_percentage">In Percentage</string>
    <string name="pref_summary_percentage">Percentage of values in range.</string>
    <string name="pref_title_high_percentage">High Percentage</string>
    <string name="pref_summary_high_percentage">Percentage of values above range.</string>
    <string name="pref_title_low_percentage">Low Percentage</string>
    <string name="pref_summary_low_percentage">Percentage of values below range.</string>
    <string name="pref_title_time">Time</string>
    <string name="pref_summary_time">The current time.</string>
    <string name="pref_title_widget_range_lines">Widget Range Lines</string>
    <string name="pref_summary_widget_range_lines">Show a high and low line on the widget.</string>
    <string name="pref_title_adjust_past">Adjust Past on Calibration</string>
    <string name="pref_summary_adjust_past">Gradually adjust the last 30 readings to the new calibration.</string>
    <string name="pref_title_view_errors">View Recent Errors/Warnings</string>
    <string name="pref_header_data_source_settings">Data Source Settings</string>
    <string name="pref_title_data_source">Hardware Data Source</string>
    <string name="pref_summary_data_source">How are you going to receive data from your Dexcom/Transmitter?</string>
    <string name="pref_title_receiver_serial">Enter 10 Character Dexcom Receiver Serial Number</string>
    <string name="pref_title_transmitter_id">Dexcom Transmitter ID</string>
    <string name="pref_summary_transmitter_id">ID of your Dexcom Transmitter, eg ABCDEF</string>
    <string name="pref_title_bridge_battery">Display Bridge Battery</string>
    <string name="pref_summary_bridge_battery">Choose to display the bridge battery level</string>
    <string name="pref_title_service_foreground">Run Collection Service in foreground</string>
    <string name="pref_summary_service_foreground">Running in foreground prevents android from killing the service and creates a notification with a trend line.</string>
    <string name="pref_title_g5_constant_scan">Scan for G5 constantly</string>
    <string name="pref_summary_g5_constant_scan">Some devices work better when scanning constantly, others do not. If reading is reliable when this setting is not selected, you should have improved battery life. Turn this setting on if you are missing readings at high rates and unexpected times.</string>
    <string name="pref_title_g5_ui_thread">Force G5 to UI Thread</string>
    <string name="pref_summary_g5_ui_thread">This is crucial for some Android devices to properly connect, but can cause missed readings when other UI intensive activities are in use.</string>
    <string name="pref_title_g5_authenticate">Authenticate G5 before each read</string>
    <string name="pref_summary_g5_authenticate">This will attempt a full authentication each read attempt. Redundant if Unbond before each read is also selected.</string>
    <string name="pref_title_g5_unbond">Unbond G5 before each read</string>
    <string name="pref_summary_g5_unbond">This will remove the G5 from your device\'s paired device list, and attempt a full authentication and bonding with each read attempt.</string>
    <string name="pref_title_receiver_list">List of recievers</string>
    <string name="pref_title_nightscout_url">Nightscout website address</string>
    <string name="pref_header_general_settings">General Settings</string>
    <string name="pref_title_bg_units">Bg Units</string>
    <string name="pref_title_high_value">High Value</string>
    <string name="pref_summary_high_value">The maximum value you consider to be in range.</string>
    <string name="pref_title_low_value">Low Value</string>
    <string name="pref_summary_low_value">The minimum value you consider to be in range.</string>
</resources>