<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_watch_integration"
        android:key="watch_integration">
        <CheckBoxPreference
            android:key="wear_sync"
            android:title="@string/pref_title_android_wear_integration"
            android:summary="@string/pref_summary_android_wear_integration"
            android:defaultValue="false" />
        <SwitchPreference
            android:title="@string/pref_title_send_to_pebble"
            android:key="broadcast_to_pebble"
            android:summary="@string/pref_summary_send_to_pebble"
            android:defaultValue="false">
        </SwitchPreference>

        <PreferenceScreen
            android:key="pebble_preferencescreen"
            android:title="@string/pref_header_pebble_configuration"
            android:summary="@string/pref_header_summary_pebble_configuration">
            <SwitchPreference
                android:title="@string/pref_pebble_display_trend"
                android:key="pebble_display_trend"
                android:summary="@string/pref_summary_display_trend"
                android:defaultValue="false" >
            </SwitchPreference>
            <SwitchPreference
                android:title="@string/pref_pebble_display_high_line"
                android:key="pebble_high_line"
                android:summary="@string/pref_summary_pebble_display_high_line"
                android:defaultValue="false" >
            </SwitchPreference>
            <SwitchPreference
                android:title="@string/pref_pebble_display_low_line"
                android:key="pebble_low_line"
                android:summary="@string/pref_summary_pebble_display_low_line"
                android:defaultValue="false" >
            </SwitchPreference>
            <ListPreference
                android:title="@string/pref_title_trend_time_period"
                android:key="pebble_trend_period"
                android:summary="@string/pref_summary_trend_time_period"
                android:entries="@array/PebbleTrendPeriods"
                android:entryValues="@array/PebbleTrendPeriodValues"
                android:defaultValue="3">
            </ListPreference>
            <SwitchPreference
                android:title="@string/pref_title_display_delta"
                android:key="pebble_show_delta"
                android:summary="@string/pref_summary_display_delta"
                android:defaultValue="true" >
            </SwitchPreference>
            <SwitchPreference
                android:title="@string/pref_title_display_delta_units"
                android:key="pebble_show_delta_units"
                android:summary="@string/pref_summary_display_delta_units"
                android:defaultValue="true" >
            </SwitchPreference>
            <SwitchPreference
                android:title="@string/pref_title_display_slow_arrows"
                android:key="pebble_show_arrows"
                android:summary="@string/pref_summary_display_slow_arrows"
                android:defaultValue="true" >
            </SwitchPreference>
            <EditTextPreference
                android:key="pebble_special_value"
                android:title="@string/pref_title_special_value"
                android:summary="@string/pref_summary_special_value"
                android:numeric="decimal"
                android:defaultValue="99"/>
            <EditTextPreference
                android:key="pebble_special_text"
                android:title="@string/pref_title_text_to_display"
                android:summary="@string/pref_summary_text_to_display"
                android:defaultValue="@string/pref_default_bazinga" />
            <SwitchPreference
                android:title="@string/pref_title_nosignal_vibrate"
                android:key="pebble_vibe_nosignal"
                android:summary="@string/pref_summary_nosignal_vibrate"
                android:defaultValue="true">
            </SwitchPreference>
            <SwitchPreference
                android:title="@string/pref_title_alert_vibration"
                android:key="pebble_vibe_alerts"
                android:summary="@string/pref_summary_alert_vibration"
                android:defaultValue="true">
            </SwitchPreference>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="other_category"
        android:title="Other Settings">
        <SwitchPreference
            android:title="@string/pref_title_broadcast_enabled"
            android:key="broadcast_data_through_intents"
            android:summary="@string/pref_summary_broadcast_enabled"
            android:defaultValue="false" >
        </SwitchPreference>
        <CheckBoxPreference
            android:key="predictive_bg"
            android:title="@string/pref_title_predictive_values"
            android:summary="@string/pref_summary_predictive_values"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="interpret_raw"
            android:title="@string/pref_title_interpret_raw"
            android:summary="@string/pref_summary_interpret_raw"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_filtered_curve"
            android:summary="@string/pref_summary_filtered_plot"
            android:title="@string/pref_title_filtered_plot" />
        <CheckBoxPreference
            android:key="bg_to_speech"
            android:title="@string/pref_title_speak_readings"
            android:summary="@string/pref_summary_speak_readings"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="bg_to_speech_shortcut"
            android:title="@string/pref_title_speak_readings_shortcut"
            android:summary="@string/pref_summary_speak_readings_shortcut"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="store_logs"
            android:title="@string/pref_title_store_logs"
            android:summary="@string/pref_summary_store_logs"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="show_data_tables"
            android:title="@string/pref_title_show_datatables"
            android:summary="@string/pref_summary_show_datatables"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="disable_battery_warning"
            android:title="@string/pref_title_disable_battery_warning"
            android:summary="@string/pref_summary_disable_battery_warning"
            android:defaultValue="false" />

        <PreferenceScreen
            android:key="extra_status_line_preferencescreen"
            android:title="@string/pref_title_extra_status_line"
            android:summary="@string/pref_summary_extra_status_line">
            <SwitchPreference
                android:key="extra_status_line"
                android:title="@string/pref_show_extra_line"
                android:summary="@string/pref_show_extra_line"
                android:defaultValue="false" />
            <SwitchPreference
                android:key="widget_status_line"
                android:title="@string/pref_title_show_on_wdiget"
                android:summary="@string/pref_summary_show_on_widget"
                android:dependency="extra_status_line"
                android:defaultValue="false" />
            <CheckBoxPreference
                android:key="status_line_calibration_long"
                android:title="@string/pref_title_calibration_data_long"
                android:summary="@string/pref_summary_calibration_data_long"
                android:dependency="extra_status_line"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="status_line_calibration_short"
                android:title="@string/pref_title_calibration_data_short"
                android:summary="@string/pref_summary_calibration_data_short"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_avg"
                android:title="@string/pref_title_average"
                android:summary="@string/pref_summary_average"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_a1c_dcct"
                android:title="@string/pref_title_a1c_dcct"
                android:summary="@string/pref_summary_a1c_dcct"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_a1c_ifcc"
                android:title="@string/pref_title_a1c_ifcc"
                android:summary="@string/pref_summary_a1c_ifcc"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_in"
                android:title="@string/pref_title_percentage"
                android:summary="@string/pref_summary_percentage"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_high"
                android:title="@string/pref_title_high_percentage"
                android:summary="@string/pref_summary_high_percentage"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_low"
                android:title="@string/pref_title_low_percentage"
                android:summary="@string/pref_summary_low_percentage"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="status_line_time"
                android:title="@string/pref_title_time"
                android:summary="@string/pref_summary_time"
                android:dependency="extra_status_line"
                android:defaultValue="false"/>
        </PreferenceScreen>
        <CheckBoxPreference
            android:key="widget_range_lines"
            android:title="@string/pref_title_widget_range_lines"
            android:summary="@string/pref_summary_widget_range_lines"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="adjust_past"
            android:title="@string/pref_title_adjust_past"
            android:summary="@string/pref_summary_adjust_past"
            android:defaultValue="false" />
        <Preference
            android:title="@string/pref_title_view_errors"
            android:key="recent_errors">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="@string/target_package"
                android:targetClass="com.eveningoutpost.dexdrip.ErrorsActivity"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>

