<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="collection_category"
        android:title="@string/pref_header_data_source_settings">

        <ListPreference
            android:key="dex_collection_method"
            android:title="@string/pref_title_data_source"
            android:summary="@string/pref_summary_data_source"
            android:entries="@array/DexCollectionMethods"
            android:entryValues="@array/DexCollectionMethodValues"
            android:defaultValue="BluetoothWixel"/>
        <EditTextPreference
            android:title="@string/pref_title_receiver_serial"
            android:key="share_key"
            android:shouldDisableView="true"
            android:defaultValue="SM00000000"/>
        <PreferenceScreen
            android:title="@string/scan_share2_barcode"
            android:key="scan_share2_barcode"
            android:shouldDisableView="true"
            android:summary="@string/pref_share2_scan_barcode_summary" />
        <EditTextPreference
            android:key="dex_txid"
            android:title="@string/pref_title_transmitter_id"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="textNoSuggestions|textVisiblePassword|textCapCharacters"
            android:summary="@string/pref_summary_transmitter_id" />
        <CheckBoxPreference
            android:key="display_bridge_battery"
            android:title="@string/pref_title_bridge_battery"
            android:summary="@string/pref_summary_bridge_battery"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="run_service_in_foreground"
            android:title="@string/pref_title_service_foreground"
            android:summary="@string/pref_summary_service_foreground"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="run_ble_scan_constantly"
            android:title="@string/pref_title_g5_constant_scan"
            android:summary="@string/pref_summary_g5_constant_scan"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="run_G5_ble_tasks_on_uithread"
            android:title="@string/pref_title_g5_ui_thread"
            android:summary="@string/pref_summary_g5_ui_thread"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="always_get_new_keys"
            android:title="@string/pref_title_g5_authenticate"
            android:summary="@string/pref_summary_g5_authenticate"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="always_unbond_G5"
            android:title="@string/pref_title_g5_unbond"
            android:summary="@string/pref_summary_g5_unbond"
            android:defaultValue="false" />
        <EditTextPreference
            android:title="@string/pref_title_receiver_list"
            android:key="wifi_recievers_addresses"
            android:dialogTitle="@string/wifi_recievers_dialog_title"
            android:dialogMessage="@string/wifi_recievers_dialog_message"
            android:defaultValue=""
            android:inputType="textUri">
        </EditTextPreference>
        
        <EditTextPreference
            android:title="@string/pref_title_nightscout_url"
            android:key="xdrip_viewer_ns_addresses"
            android:dialogTitle="@string/xdrip_viewer_ns_dialog_title"
            android:dialogMessage="@string/xdrip_viewer_ns_message_message"
            android:defaultValue="https://{YOUR-SITE}.azurewebsites.net"
            android:inputType="textUri">
        </EditTextPreference>
        
    </PreferenceCategory>
</PreferenceScreen>
