<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_resend_last_bg"
        android:orderInCategory="100"
        android:title="@string/action_resend_to_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_watch_settings"
        android:orderInCategory="100"
        android:title="@string/action_open_watch_setting"
        app:showAsAction="never" />


    <item android:id="@+id/export_submenu"
        android:title="@string/export_submenu"
        android:orderInCategory="1">

        <menu>
            <item android:id="@+id/action_export_database"
                android:title="@string/menu_export_database"
                android:checkable="false"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/action_import_db"
                android:title="@string/menu_import_db"
                android:checkable="false"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/action_export_csv_sidiary"
                android:title="@string/menu_export_csv_sidiary"
                android:checkable="false"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/importsettings"
                android:title="Settings to external storage"
                android:checkable="false"
                android:onClick="settingsSDcardExport"
                android:visible="true"
                android:orderInCategory="1"
                app:showAsAction="never"/>
        </menu>

    </item>
    <item android:id="@+id/action_toggle_speakreadings"
        android:title="@string/menu_toggle_speakreadings"
        android:checkable="true"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="never"/>
</menu>